# JAMILAPIS

google-drive/: TODO.md
google-drive/csharp/: JamiApis.GoogleDrive.sln  README.md
google-drive/csharp/JamiApis.GoogleDrive/: DriveConfig.cs  GoogleDriveClient.cs  JamiApis.GoogleDrive.csproj
google-drive/csharp/JamiApis.GoogleDrive.Demo/: JamiApis.GoogleDrive.Demo.csproj  Program.cs
google-drive/csharp/JamiApis.GoogleDrive.Tests/: GoogleDriveClientTests.cs  JamiApis.GoogleDrive.Tests.csproj
google-drive/docs/: SETUP.md
google-drive/node/: README.md  package.json
google-drive/node/demo/: .env.example  server.js
google-drive/node/src/: googleDriveClient.js  index.js
google-drive/node/tests/: googleDriveClient.test.js
google-drive/php/: README.md  composer.json  demo.php
google-drive/php/src/: GoogleDriveClient.php
google-drive/php/tests/: GoogleDriveClientTest.php
google-drive/python/: .env.example  README.md  demo.py  pyproject.toml
google-drive/python/jamiapis_gdrive/: client.py
google-drive/python/tests/: test_client.py
