[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jamiapis-gdrive"
version = "0.1.0"
description = "Google Drive API v3 wrapper for service account access."
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.120.0",
  "google-auth>=2.29.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jamiapis_gdrive*"]
